@@ -1,7 +1,5 @@
 Reply-To-Option
 
-Listen-Auswahl fuer Einsende/Mod/...-Modi (moderiert & offen / newsletter / ...)
-
 Infos fuer Massen-Hosting:
 	http://www.fbis.ch/index-de.php?page=14&frameset=4
 
