@@ -1,0 +1,3 @@
+<!-- REMOVE --><?cs include:TemplateDir + '/macros.cs' ?>
+<!-- posting rules -->
+<?cs call:selection_list("posting") ?>
